--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -1,10 +1,20 @@
-<div class="wrapper">
-    <form class="search-form" id="search-form">
-        <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-        <button type="submit">Search</button>
-    </form>
-</div>
-<div class="gallery">
+<div class="album py-5 ">
+    <div class="container">
+        <div class=" mb-3">
+            <form class="search-form  g-3" id="search-form">
+                <div class="input-group mb-3">
+                    <input class="form-control" type="text" name="searchQuery" autocomplete="off"
+                        placeholder="Search images.." />
+                    <button type="submit" class="btn btn-primary ">Search</button>
+                </div>
+            </form>
+        </div>
+        <div class="gallery row row-cols-1 row-cols-sm-2 row-cols-md-3 g-1 gx-2">
 
+        </div>
+        <div class="d-grid gap-2 col-4 mx-auto mt-3">
+            <button type="button" class="load-more btn btn-primary mb-2 ">Load more</button>
+        </div>
+
+    </div>
 </div>
-<button type="button" class="load-more">Load more</button>
