--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -9,12 +9,15 @@
                 </div>
             </form>
         </div>
-        <div class="gallery row row-cols-1 row-cols-sm-2 row-cols-md-3 g-1 gx-2">
+        <div class="gallery row gap-2 ">
 
         </div>
-        <div class="d-grid gap-2 col-4 mx-auto mt-3">
+        <div class="d-grid gap-2 col-4 mx-auto mt-3 text-center ">
+            <p class="load-more-wrapper"></p>
             <button type="button" class="load-more btn btn-primary mb-2 ">Load more</button>
         </div>
-
     </div>
+</div>
+<div class="backdrop">
+    <div class="loader"></div>
 </div>
