--- a/src/sass/_search.scss
+++ b/src/sass/_search.scss
@@ -1,3 +1,53 @@
-.is-hidden{
-    display: none;
+html {
+  scroll-behavior: smooth;
 }
+.is-hidden {
+  display: none;
+}
+.backdrop{
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.417);
+    position: absolute;
+    left: 0;
+    top:0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+.loader {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    margin: 5px;
+    display: inline-block;
+    position: relative;
+    border: 4px solid #02a157;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+.loader::after {
+    content: '';  
+    box-sizing: border-box;
+    position: absolute;
+    left: 4px;
+    top: 4px;
+    border: 2px solid #FFF;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+}
+    
+@keyframes rotation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+}
+
+body.show-loader .backdrop{
+display: flex;
+}
+
