--- a/src/sass/_search.scss
+++ b/src/sass/_search.scss
@@ -51,3 +51,14 @@ body.show-loader .backdrop{
 display: flex;
 }
 
+.form-control:focus {
+  outline: 0 !important;
+  border-color: initial;
+  box-shadow: none;
+}
+
+.btn-pos {
+  position:relative;
+  z-index:1;
+  left: -36px;
+}
