--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -3,9 +3,18 @@
         <div class=" mb-3">
             <form class="search-form  g-3" id="search-form">
                 <div class="input-group mb-3">
-                    <input class="form-control" type="text" name="searchQuery" autocomplete="off"
+                    <input class="form-control border-right-0 border" type="text" name="searchQuery" autocomplete="off"
                         placeholder="Search images.." />
-                    <button type="submit" class="btn btn-primary">Search</button>
+
+                    <button class="btn btn-outline-secondary clear-btn border-left-0 border" type="button">
+                        <svg class="close-icon" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20"
+                            height="20" viewBox="0 0 24 24">
+                            <path
+                                d="M 4.9902344 3.9902344 A 1.0001 1.0001 0 0 0 4.2929688 5.7070312 L 10.585938 12 L 4.2929688 18.292969 A 1.0001 1.0001 0 1 0 5.7070312 19.707031 L 12 13.414062 L 18.292969 19.707031 A 1.0001 1.0001 0 1 0 19.707031 18.292969 L 13.414062 12 L 19.707031 5.7070312 A 1.0001 1.0001 0 0 0 18.980469 3.9902344 A 1.0001 1.0001 0 0 0 18.292969 4.2929688 L 12 10.585938 L 5.7070312 4.2929688 A 1.0001 1.0001 0 0 0 4.9902344 3.9902344 z">
+                            </path>
+                        </svg>
+                    </button>
+                    <button type="submit" class="btn btn-primary">Search
                 </div>
             </form>
         </div>
