added clear button styles

--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -3,10 +3,10 @@
         <div class=" mb-3">
             <form class="search-form  g-3" id="search-form">
                 <div class="input-group mb-3">
-                    <input class="form-control border-right-0 border" type="text" name="searchQuery" autocomplete="off"
+                    <input class="form-control" type="text" name="searchQuery" autocomplete="off"
                         placeholder="Search images.." />
 
-                    <button class="btn btn-outline-secondary clear-btn border-left-0 border" type="button">
+                    <button class="btn btn-light clear-btn border" type="button">
                         <svg class="close-icon" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20"
                             height="20" viewBox="0 0 24 24">
                             <path
